<resources>
    <string name="app_name">Hello Android</string>
    <string name="back">返回</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="loading">正在很努力的加载中...</string>
    <string name="blog_key">个人博客：</string>
    <string name="blog_value">https://www.jianshu.com/u/24c3a8a7ec80</string>
    <string name="email">670831931@qq.com</string>
    <string name="name">假装是个程序猿</string>
    <string name="github_key">Github</string>
    <string name="github_value">https://github.com/ldlywt</string>

</resources>
