<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="40dp"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:gravity="center"-->
    <!--android:text="About me"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="18sp" />-->


    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/pic_me" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/color_33"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@color/color_33"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/divider_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/color_line" />

        <TextView
            android:id="@+id/tv_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_top"
            android:text="@string/blog_key"
            android:textColor="@color/color_66"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_blog_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_blog"
            android:layout_marginTop="10dp"
            android:text="@string/blog_value"
            android:textColor="@color/color_66"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/divider_middle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_blog_url"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/color_line" />

        <TextView
            android:id="@+id/tv_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_middle"
            android:text="@string/github_key"
            android:textColor="@color/color_66"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_github_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_github"
            android:text="@string/github_value"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_66"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_github_url"
            android:layout_marginTop="15dp"
            android:background="@color/color_line" />
    </RelativeLayout>
</LinearLayout>
